# advent-of-code-2025

./: Cargo.toml  LICENSE  README.md  build.rs
src/: input.rs  lib.rs  runner.rs
src/days/: .day01.rs.swp  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  mod.rs  sample.rs
