[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[lib]
name = "aoc2025"
path = "src/lib.rs"

[[bin]]
name = "run"
path = "src/bin/run.rs"

[build-dependencies]
itertools = "0.14.0"

[dependencies]
good_lp = "1.14.2"
hamming_iter = "0.1.0"
im = "15.1.0"
itertools = "0.14.0"
memoize = "0.5.1"
paste = "1.0.15"
regex = "1.12.2"
